stationary device example v0.5.0

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -188,18 +188,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      field    date  core_number  distance_from_station   latitude  longitude  \\\n",
-       "0  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
+       "      field    date  core_number  distance_from_station   latitude  longitude   \n",
+       "0  Flickner  22-Oct            1                      5  N38.23459  W97.57101  \\\n",
        "1  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
        "2  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
        "\n",
-       "   top_depth  bottom_depth  core_diameter  wet_mass_with_bag  ...  can_number  \\\n",
-       "0          0             5          30.49              45.31  ...           1   \n",
+       "   top_depth  bottom_depth  core_diameter  wet_mass_with_bag  ...  can_number   \n",
+       "0          0             5          30.49              45.31  ...           1  \\\n",
        "1          5            10          30.49              69.53  ...           2   \n",
        "2         10            25          30.49             214.90  ...           3   \n",
        "\n",
-       "   mass_empty_can  wet_mass_with_can  dry_mass_with_can  mass_water  theta_g  \\\n",
-       "0           52.10              92.03              85.31        6.72    0.202   \n",
+       "   mass_empty_can  wet_mass_with_can  dry_mass_with_can  mass_water  theta_g   \n",
+       "0           52.10              92.03              85.31        6.72    0.202  \\\n",
        "1           51.85             115.97             103.85       12.12    0.233   \n",
        "2           51.56             260.97             219.77       41.20    0.245   \n",
        "\n",
@@ -372,28 +372,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            TIMESTAMP  RECORD station      farm          field  latitude  \\\n",
-       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461   \n",
+       "            TIMESTAMP  RECORD station      farm          field  latitude   \n",
+       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461  \\\n",
        "1 2021-09-22 13:00:00       1   KS003  Flickner  Rainfed South  38.23461   \n",
        "2 2021-09-22 14:00:00       2   KS003  Flickner  Rainfed South  38.23461   \n",
        "\n",
-       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...  \\\n",
-       "0  -97.57095       455                13.52      29.04  ...   \n",
+       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...   \n",
+       "0  -97.57095       455                13.52      29.04  ...  \\\n",
        "1  -97.57095       455                13.53      29.98  ...   \n",
        "2  -97.57095       455                13.53      30.43  ...   \n",
        "\n",
-       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg  \\\n",
-       "0               352.3                 4.20                22.30   \n",
+       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg   \n",
+       "0               352.3                 4.20                22.30  \\\n",
        "1               291.6                 9.02                22.90   \n",
        "2               292.8                 5.54                23.38   \n",
        "\n",
-       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg  \\\n",
-       "0                9.20                      973                  41.30   \n",
+       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg   \n",
+       "0                9.20                      973                  41.30  \\\n",
        "1                9.08                      972                  32.63   \n",
        "2                8.68                      971                  30.25   \n",
        "\n",
-       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg  \\\n",
-       "0                             26.4                -1.000               1.000   \n",
+       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg   \n",
+       "0                             26.4                -1.000               1.000  \\\n",
        "1                             26.8                -0.975               0.950   \n",
        "2                             27.2                -0.775               0.625   \n",
        "\n",
@@ -550,28 +550,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            TIMESTAMP  RECORD station      farm          field  latitude  \\\n",
-       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461   \n",
+       "            TIMESTAMP  RECORD station      farm          field  latitude   \n",
+       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461  \\\n",
        "1 2021-09-22 13:00:00       1   KS003  Flickner  Rainfed South  38.23461   \n",
        "2 2021-09-22 14:00:00       2   KS003  Flickner  Rainfed South  38.23461   \n",
        "\n",
-       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...  \\\n",
-       "0  -97.57095       455                13.52      29.04  ...   \n",
+       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...   \n",
+       "0  -97.57095       455                13.52      29.04  ...  \\\n",
        "1  -97.57095       455                13.53      29.98  ...   \n",
        "2  -97.57095       455                13.53      30.43  ...   \n",
        "\n",
-       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg  \\\n",
-       "0               352.3                 4.20                22.30   \n",
+       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg   \n",
+       "0               352.3                 4.20                22.30  \\\n",
        "1               291.6                 9.02                22.90   \n",
        "2               292.8                 5.54                23.38   \n",
        "\n",
-       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg  \\\n",
-       "0                9.20                      973                  41.30   \n",
+       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg   \n",
+       "0                9.20                      973                  41.30  \\\n",
        "1                9.08                      972                  32.63   \n",
        "2                8.68                      971                  30.25   \n",
        "\n",
-       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg  \\\n",
-       "0                             26.4                -1.000               1.000   \n",
+       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg   \n",
+       "0                             26.4                -1.000               1.000  \\\n",
        "1                             26.8                -0.975               0.950   \n",
        "2                             27.2                -0.775               0.625   \n",
        "\n",
@@ -909,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
