--- a/docs/examples/rover/Hydroinnova_rover_example.ipynb
+++ b/docs/examples/rover/Hydroinnova_rover_example.ipynb
@@ -245,8 +245,11 @@
     "# Create figure of survey points\n",
     "plt.figure(figsize = (5,5))\n",
     "plt.scatter(df['x'], df['y'], marker='o', edgecolor='k', facecolor='w', label = \"Observation end\")\n",
-    "df['x'],df['y'] = crnpy.estimate_locations(df['x'], df['y']) # Estimate the center of the observation\n",
+    "\n",
+    "# Estimate the center of the observation, assuming each timestamp is observation end time.\n",
+    "df['x'],df['y'] = crnpy.estimate_locations(df['x'], df['y']) \n",
     "plt.scatter(df['x'], df['y'], marker='+', label=\"Observation center\")\n",
+    "\n",
     "plt.ticklabel_format(scilimits = (-5,5))\n",
     "plt.xlabel('Easting')\n",
     "plt.ylabel('Northing')\n",
