--- a/docs/examples/stationary/example_RDT_station.ipynb
+++ b/docs/examples/stationary/example_RDT_station.ipynb
@@ -174,7 +174,7 @@
    "id": "06ba6259-4ef4-432b-a4d3-1314a864e768",
    "metadata": {},
    "source": [
-    "Utilize the [`compute_total_raw_counts()`](../../../reference/#crnpy.crnpy.compute_total_raw_counts) function to calculate the total counts across all detectors. After calculating the total counts, identify outliers using the [`is_outlier()`](../../../reference/#crnpy.crnpy.drop_outliers) function."
+    "Utilize the [`compute_total_raw_counts()`](../../../reference/#crnpy.crnpy.compute_total_raw_counts) function to calculate the total counts across all detectors. After calculating the total counts, identify outliers using the [`is_outlier()`](../../../reference/#crnpy.crnpy.is_outlier) function."
    ]
   },
   {
