--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -626,7 +626,7 @@
    "outputs": [],
    "source": [
     "# Compute total neutron counts by adding the counts from both probe detectors\n",
-    "df_station['total_raw_counts'] = crnpy.compute_total_raw_counts(df_station[['counts_1_Tot','counts_2_Tot']],\n",
+    "df_station['total_raw_counts'] = crnpy.total_raw_counts(df_station[['counts_1_Tot','counts_2_Tot']],\n",
     "                                                    nan_strategy='average')\n"
    ]
   },
@@ -643,7 +643,7 @@
     "df_station[['barometric_pressure_Avg','relative_humidity_Avg', 'air_temperature_Avg']] = df_station[['barometric_pressure_Avg','relative_humidity_Avg', 'air_temperature_Avg']].interpolate(method='pchip', limit=24, limit_direction='both')\n",
     "\n",
     "# Calculate absolute humidity\n",
-    "df_station['abs_humidity'] = crnpy.estimate_abs_humidity(df_station['relative_humidity_Avg'], df_station['air_temperature_Avg'])\n",
+    "df_station['abs_humidity'] = crnpy.abs_humidity(df_station['relative_humidity_Avg'], df_station['air_temperature_Avg'])\n",
     "\n",
     "# Compute correction factor for atmospheric pressure\n",
     "# Reference atmospheric pressure for the location is 976 Pa\n",
