--- a/docs/examples/rover/Hydroinnova_rover_example.ipynb
+++ b/docs/examples/rover/Hydroinnova_rover_example.ipynb
@@ -247,7 +247,7 @@
     "plt.scatter(df['x'], df['y'], marker='o', edgecolor='k', facecolor='w', label = \"Observation end\")\n",
     "\n",
     "# Estimate the center of the observation, assuming each timestamp is observation end time.\n",
-    "df['x'],df['y'] = crnpy.estimate_locations(df['x'], df['y']) \n",
+    "df['x'],df['y'] = crnpy.rover_centered_coordinates(df['x'], df['y']) \n",
     "plt.scatter(df['x'], df['y'], marker='+', label=\"Observation center\")\n",
     "\n",
     "plt.ticklabel_format(scilimits = (-5,5))\n",
@@ -277,7 +277,7 @@
     "cont_times_col = ['N1ETsec', 'N1ETsec', 'N3ETsec','N3ETsec', 'N5ETsec', 'N5ETsec', 'N7ETsec', 'N7ETsec']\n",
     "\n",
     "# Compute total neutron counts\n",
-    "df['total_raw_counts'] = crnpy.compute_total_raw_counts(df[counts_colums])\n"
+    "df['total_raw_counts'] = crnpy.total_raw_counts(df[counts_colums])\n"
    ]
   },
   {
@@ -480,7 +480,7 @@
     "df['fp'] = crnpy.pressure_correction(pressure=df['barometric_pressure_Avg'], Pref=df['barometric_pressure_Avg'].mean(), L=130)\n",
     "\n",
     "# Estimate the absolute humidity and compute the vapor pressure correction factor\n",
-    "df['abs_humidity'] = crnpy.estimate_abs_humidity(df['relative_humidity_Avg'], df['air_temperature_Avg'])\n",
+    "df['abs_humidity'] = crnpy.abs_humidity(df['relative_humidity_Avg'], df['air_temperature_Avg'])\n",
     "df['fw'] = crnpy.humidity_correction(df['abs_humidity'], Aref=0)\n"
    ]
   },
