--- a/docs/examples/stationary/example_RDT_station.ipynb
+++ b/docs/examples/stationary/example_RDT_station.ipynb
@@ -174,7 +174,7 @@
    "id": "06ba6259-4ef4-432b-a4d3-1314a864e768",
    "metadata": {},
    "source": [
-    "Utilize the [`compute_total_raw_counts()`](../../../reference/#crnpy.crnpy.compute_total_raw_counts) function to calculate the total counts across all detectors. After calculating the total counts, identify outliers using the [`is_outlier()`](../../../reference/#crnpy.crnpy.is_outlier) function."
+    "Utilize the [`total_raw_counts()`](../../../reference/#crnpy.crnpy.total_raw_counts) function to calculate the total counts across all detectors. After calculating the total counts, identify outliers using the [`is_outlier()`](../../../reference/#crnpy.crnpy.is_outlier) function."
    ]
   },
   {
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "# Compute total cunts\n",
-    "df['total_raw_counts'] = crnpy.compute_total_raw_counts(df[cols_counts], nan_strategy='average')\n"
+    "df['total_raw_counts'] = crnpy.total_raw_counts(df[cols_counts], nan_strategy='average')\n"
    ]
   },
   {
@@ -428,7 +428,7 @@
     "df['fp'] = crnpy.pressure_correction(pressure=df['barometric_pressure_Avg'], Pref=df['barometric_pressure_Avg'].mean(), L=130)\n",
     "\n",
     "# Calculate the absolute humidity (g cm^-3) and the vapor pressure correction factor\n",
-    "df['abs_humidity'] = crnpy.estimate_abs_humidity(df['relative_humidity_Avg'], df['air_temperature_Avg'])\n",
+    "df['abs_humidity'] = crnpy.abs_humidity(df['relative_humidity_Avg'], df['air_temperature_Avg'])\n",
     "df['fw'] = crnpy.humidity_correction(abs_humidity=df['abs_humidity'], Aref=0)\n"
    ]
   },
@@ -463,7 +463,7 @@
     "N0_rdt = 3767 # Patrignani, A., Ochsner, T. E., Montag, B., & Bellinger, S. (2021). A novel lithium foil cosmic-ray neutron detector for measuring field-scale soil moisture. Frontiers in Water, 3, 673185.\n",
     "\n",
     "# Estimate lattice water (%) based on texture, and convert it to decimal.\n",
-    "lattice_water = crnpy.estimate_lattice_water(clay_content=0.35) / 100\n",
+    "lattice_water = crnpy.lattice_water(clay_content=0.35) / 100\n",
     "\n",
     "df['VWC'] = crnpy.counts_to_vwc(df['total_corrected_neutrons'], N0=N0_rdt, bulk_density=1.33, Wlat=lattice_water, Wsoc=0.01)\n",
     "\n",
