paper moved to root, and repo updated

--- a/figures/code/workflow.ipynb
+++ b/figures/code/workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "04786474-8a61-4ace-8850-bd22bff5a8b8",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "64ddac7e-5f4e-4eee-93dd-9bcf2889b589",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dot_graph = pydot.graph_from_dot_file(\"diagram.dot\")\n",
-    "dot_graph[0].write_png('../workflow.png', prog=\"neato\")\n"
+    "#dot_graph = pydot.graph_from_dot_file(\"diagram.dot\")\n",
+    "#dot_graph[0].write_png('../workflow.png', prog=\"neato\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "3d1ada2c-38dc-4018-9718-6a63af37ca58",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "befb844b-c54f-4104-b59c-899d5f73ffc9",
    "metadata": {},
    "outputs": [],
