--- a/paper.bib
+++ b/paper.bib
@@ -89,7 +89,7 @@
   doi={10.1007/978-3-319-69539-6_2}
 }
 
-@article{schron2018roads
+@article{schron2018roads,
 author = {Schrön, M. and Rosolem, R. and Köhli, M. and Piussi, L. and Schröter, I. and Iwema, J. and Kögler, S. and Oswald, S. E. and Wollschläger, U. and Samaniego, L. and Dietrich, P. and Zacharias, S.},
 title = {Cosmic-ray Neutron Rover Surveys of Field Soil Moisture and the Influence of Roads},
 journal = {Water Resources Research},
