Fixed Weighting according to Schrön et al. (2017)
Addressing the comments in #9, the method was updated to use the iterative routine.

Examples and tests, were also updated.

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -802,14 +802,22 @@
    "execution_count": 11,
    "id": "457e6db7-a5ab-4424-a93b-7b0f4a46fe45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution converged after 2 steps, the average soil moisture is 0.2197191482091855\n"
+     ]
+    }
+   ],
    "source": [
-    "# Compute the weights of each sample for the field average\n",
-    "nrad_weights = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean())\n",
+    "# Weight the samples for the field average\n",
+    "#field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean(), method=\"Kohli_2015\")\n",
+    "field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean(),p=df_station['barometric_pressure_Avg'].mean(), method = \"Schron_2017\")\n",
     "\n",
     "# Apply distance weights to volumetric water content and bulk density\n",
-    "field_theta_v = np.sum(df_soil['theta_v']*nrad_weights)\n",
-    "field_bulk_density = np.sum(df_soil['bulk_density']*nrad_weights)\n"
+    "field_bulk_density = np.mean(df_soil['bulk_density'])\n"
    ]
   },
   {
@@ -822,7 +830,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean volumetric Water content during calibration survey: 0.263\n",
+      "Mean volumetric Water content during calibration survey: 0.22\n",
       "Mean corrected counts during calibration: 1543 counts\n"
      ]
     }
@@ -856,7 +864,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The solved value for N0 is: 2645\n"
+      "The solved value for N0 is: 2470\n"
      ]
     }
    ],
@@ -886,6 +894,14 @@
     "\n",
     "Patrignani, A., Ochsner, T. E., Montag, B., & Bellinger, S. (2021). A novel lithium foil cosmic-ray neutron detector for measuring field-scale soil moisture. Frontiers in Water, 3, 673185."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af515744-a25e-4fb0-8fd0-3559b0fea276",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
