Minor fixes in code style

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "130e6b13",
    "metadata": {
     "collapsed": false,
@@ -37,7 +37,8 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -814,7 +815,13 @@
    "source": [
     "# Weight the samples for the field average\n",
     "#field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean(), method=\"Kohli_2015\")\n",
-    "field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean(),p=df_station['barometric_pressure_Avg'].mean(), method = \"Schron_2017\")\n",
+    "field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), \n",
+    "                                     df_soil['theta_v'],\n",
+    "                                     df_soil['distance_from_station'], \n",
+    "                                     (df_soil['bottom_depth']+df_soil['top_depth'])/2,\n",
+    "                                     rhob = df_soil['bulk_density'].mean(),\n",
+    "                                     p = df_station['barometric_pressure_Avg'].mean(),\n",
+    "                                     method = \"Schron_2017\")\n",
     "\n",
     "# Apply distance weights to volumetric water content and bulk density\n",
     "field_bulk_density = np.mean(df_soil['bulk_density'])\n"
@@ -920,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
