Add the profile ID in the Schrön et al. (2017) method
#9 Added the parameter`profiles`, which is the ID that identifies each unique soil profile P when running the weighting algorithm.

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -232,7 +232,10 @@
    "source": [
     "# Define start and end of field survey calibration\n",
     "calibration_start = pd.to_datetime(\"2021-10-22 08:00\")\n",
-    "calibration_end = pd.to_datetime(\"2021-10-22 16:00\")\n"
+    "calibration_end = pd.to_datetime(\"2021-10-22 16:00\")\n",
+    "\n",
+    "# Create an ID for each soil profile using their respective latitude and longitude\n",
+    "df_soil['ID'] = df_soil['latitude'].astype(str) +'_'+ df_soil['longitude'].astype(str)"
    ]
   },
   {
@@ -807,14 +810,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution converged after 2 steps, the average soil moisture is 0.2197191482091855\n"
+      "Solution converged after 2 steps, the average soil moisture is 0.2047467442102135\n"
      ]
     }
    ],
    "source": [
     "# Weight the samples for the field average\n",
     "#field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean(), method=\"Kohli_2015\")\n",
-    "field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean(),p=df_station['barometric_pressure_Avg'].mean(), method = \"Schron_2017\")\n",
+    "field_theta_v, w = crnpy.nrad_weight(df_station['abs_humidity'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, profiles=df_soil['ID'], rhob=df_soil['bulk_density'].mean(),p=df_station['barometric_pressure_Avg'].mean(), method = \"Schron_2017\")\n",
     "\n",
     "# Apply distance weights to volumetric water content and bulk density\n",
     "field_bulk_density = np.mean(df_soil['bulk_density'])\n"
@@ -830,7 +833,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean volumetric Water content during calibration survey: 0.22\n",
+      "Mean volumetric Water content during calibration survey: 0.205\n",
       "Mean corrected counts during calibration: 1543 counts\n"
      ]
     }
@@ -851,7 +854,7 @@
    "source": [
     "## Solving for $N_0$\n",
     "\n",
-    "Previous steps estimated the field volumetric water content of `0.263` and an average neutron count of `1542`. Using [`scipy.optimize.root()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) $N_0$ is estimated given the observed value of $\\theta_v$ and neutron counts."
+    "Previous steps estimated the field volumetric water content of `0.205` and an average neutron count of `1543`. Using [`scipy.optimize.root()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) $N_0$ is estimated given the observed value of $\\theta_v$ and neutron counts."
    ]
   },
   {
@@ -864,7 +867,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The solved value for N0 is: 2470\n"
+      "The solved value for N0 is: 2434\n"
      ]
     }
    ],
